--- a/main.tex
+++ b/main.tex
@@ -163,6 +163,7 @@
             \divider
 
             \cvlang{Lang 2}{Basic / A2}
+            \bigskip
             %% Yeah I didn't spend too much time making all the
             %% spacing consistent... sorry. Use \smallskip, \medskip,
             %% \bigskip, \vpsace etc to make ajustments.
