--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%
 % This is an sample CV template created using altacv.cls
 % (v1.3, 10 May 2020) written by LianTze Lim (liantze@gmail.com). Now compiles with pdfLaTeX, XeLaTeX and LuaLaTeX.
-% (v1.6.5c, 27 Jun 2023) forked by Nicolás Omar González Passerino (nicolas.passerino@gmail.com)
+% (v1.7.1b, 11 Jan 2024) forked by Nicolás Omar González Passerino (nicolas.passerino@gmail.com)
 %
 %% It may be distributed and/or modified under the
 %% conditions of the LaTeX Project Public License, either version 1.3
@@ -140,20 +140,21 @@
         \cvsection{TECH STACK}
             %% Fork v1.6.5c: The sloppypar* environment is used to avoid tags overlapping with section width
             \begin{sloppypar*}
-                \cvtags{One, Two, Three, Four, Five, Six, Seven, Eight, Nine, Ten}
+                %% Fork 1.7.1b: Now in case you want to highlight any tag, just add a '/true' property next to its text and it will change tag's text and border colors.
+                \cvtags{One/true, Two, Three/true, Four, Five/true, Six, Seven/true, Eight, Nine/true, Ten}
                 \medskip
 
-                \cvtags{Red, Yellow, Blue, Green, Violet, Orange}
+                \cvtags{Red, Yellow/true, Blue, Green/true, Violet, Orange/true}
             \end{sloppypar*}
         % ----- TECH STACK -----
         
         % ----- LEARNING -----
         \cvsection{Learning}
             \begin{sloppypar*}
-                \cvtags{Uno, Dos, Tres, Cuatro, Cinco, Seis, Siete, Ocho, Nueve, Diez}
+                \cvtags{Uno, Dos/true, Tres, Cuatro/true, Cinco, Seis/true, Siete, Ocho/true, Nueve, Diez/true}
                 \medskip
 
-                \cvtags{Rojo, Amarillo, Azul, Verde, Violeta, Naranja, Marron, Blanco, Gris, Negro}
+                \cvtags{Rojo/true, Amarillo, Azul/true, Verde, Violeta/true, Naranja, Marron/true, Blanco, Gris/true, Negro}
             \end{sloppypar*}
         % ----- LEARNING -----
         
