--- a/main.tex
+++ b/main.tex
@@ -51,9 +51,9 @@
   \renewcommand{\familydefault}{\sfdefault}
 \fi
 
-\definecolor{PrimaryColor}{HTML}{001F5A}
-\definecolor{SecondaryColor}{HTML}{0039AC}
-\definecolor{ThirdColor}{HTML}{F3890B}
+\definecolor{PrimaryColor}{HTML}{383838}
+\definecolor{SecondaryColor}{HTML}{9D0137}
+\definecolor{ThirdColor}{HTML}{DCEA8E}
 \definecolor{BodyColor}{HTML}{666666}
 \definecolor{EmphasisColor}{HTML}{2E2E2E}
 \definecolor{BackgroundColor}{HTML}{FFFFFF}
