improve oss proj section

--- a/main.tex
+++ b/main.tex
@@ -221,17 +221,9 @@
 
         % ----- PROJECTS -----
         \cvsection{OSS Projects \& Contributions}
-            \cvevent{Project 1 }{\cvreference{\faGithub}{https://github.com/user/repo}\cvreference{| \faGlobe}{https://project-demo.com/}}{Mm YYYY -- Mm YYYY}{}
             \begin{itemize}
-                \item Item 1
-                \item Item 2
-            \end{itemize}
-            \divider
-            
-            \cvevent{Project 2 }{\cvreference{\faGitlab}{https://gitlab.com/user/repo}\cvreference{| \faGlobe}{https://project-demo.com/}}{Mm YYYY -- Mm YYYY}{}
-            \begin{itemize}
-                \item Item 1
-                \item Item 2
+                \item \cvreference{\faGithub}{https://github.com/user/repo} \textbf{Project 1} -- Description
+                \item \cvreference{\faGithub}{https://github.com/user/repo} \textbf{Project 2} -- Description
             \end{itemize}
         % ----- PROJECTS -----
         
