--- a/main.tex
+++ b/main.tex
@@ -173,19 +173,6 @@
         % \cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
         % ----- MOST PROUD -----
         
-        % \cvsection{A Day of My Life}
-        
-        % Adapted from @Jake's answer from http://tex.stackexchange.com/a/82729/226
-        % \wheelchart{outer radius}{inner radius}{
-        % comma-separated list of value/text width/color/detail}
-        % \wheelchart{1.5cm}{0.5cm}{%
-        %   6/8em/accent!30/{Sleep,\\beautiful sleep},
-        %   3/8em/accent!40/Hopeful novelist by night,
-        %   8/8em/accent!60/Daytime job,
-        %   2/10em/accent/Sports and relaxation,
-        %   5/6em/accent!20/Spending time with family
-        % }
-        
         % use ONLY \newpage if you want to force a page break for
         % ONLY the current column
         \newpage
@@ -203,7 +190,7 @@
         
         % ----- WORK EXPERIENCE -----
         \cvsection{Work Experience}
-            \cvevent{Charge}{Company}{Mm YYYY -- Mm YYYY}{City, Country}
+            \cvevent{Charge}{Company}{City, Country}{Mm YYYY -- Mm YYYY}
             \begin{itemize}
                 \item First achievement
                 \item Second achievement
@@ -211,7 +198,7 @@
             \end{itemize}
             \divider
             
-            \cvevent{Charge}{Company}{Mm YYYY -- Mm YYYY}{City, Country}
+            \cvevent{Charge}{Company}{City, Country}{Mm YYYY -- Mm YYYY}
             \begin{itemize}
                 \item First achievement
                 \item Second achievement
@@ -231,13 +218,13 @@
     
     % ----- EDUCATION -----
     \cvsection{Education}
-        \cvevent{Title}{Institution}{Mm YYYY -- Mm YYYY}{City, Country}
+        \cvevent{Title}{Institution}{City, Country}{Mm YYYY -- Mm YYYY}
         \begin{itemize}
             \item GPA: 1,23
         \end{itemize}
         \divider
         
-        \cvevent{Title}{Institution}{Mm YYYY -- Mm YYYY}{City, Country}
+        \cvevent{Title}{Institution}{City, Country}{Mm YYYY -- Mm YYYY}
         \begin{itemize}
             \item GPA: 1,23
         \end{itemize}
@@ -246,14 +233,14 @@
 
     % ----- MISCELLANEOUS -----
     \cvsection{Miscellaneous}
-        \cvevent{Title}{Institution/Company}{Mm YYYY -- Mm YYYY}{City, Country}
+        \cvevent{Title}{Institution/Company}{City, Country}{Mm YYYY -- Mm YYYY}
         \begin{itemize}
             \item Item 1
             \item Item 2
         \end{itemize}
         \divider
         
-        \cvevent{Title}{Institution/Company}{Mm YYYY -- Mm YYYY}{City, Country}
+        \cvevent{Title}{Institution/Company}{City, Country}{Mm YYYY -- Mm YYYY}
         \begin{itemize}
             \item Item 1
             \item Item 2
