improve files org

--- a/cover.tex
+++ b/cover.tex
@@ -48,8 +48,8 @@
 \renewcommand{\cvsectionfont}{\LARGE\rmfamily\bfseries}
 \renewcommand{\cvsubsectionfont}{\large\bfseries}
 
-\input{pubs-num-cover.cfg}
-\addbibresource{main.bib}
+\input{bib_cfg/pubs-num-cover.cfg}
+\addbibresource{mybib.bib}
 
 \begin{document}
     \name{John Doe}
