--- a/main.tex
+++ b/main.tex
@@ -80,8 +80,8 @@
 \renewcommand{\itemmarker}{{\small\textbullet}}
 \renewcommand{\ratingmarker}{\faCircle}
 
-\input{pubs-num.cfg}
-\addbibresource{main.bib}
+\input{bib_cfg/pubs-num.cfg}
+\addbibresource{mybib.bib}
 
 \begin{document}
     \name{John Doe}
